# twilio-secret-santa

./: .gitignore  LICENSE.md  README.md  export.py  history.py  import_data.py  main.py  match.py  message.py  mixins.py  models.py  pyproject.toml  report.py  requirements.txt  validate.py
.devcontainer/: devcontainer.json
